# physical-systems-intelligence

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/domains/drone_inspection/: manifest.yaml
backend/app/domains/drone_inspection/documents/: maintenance_manual.md  operating_limits.md
backend/app/domains/drone_inspection/prompts/: diagnostic_policy.md
backend/app/domains/drone_inspection/signals/: DRN-INSPECT-01.json
backend/app/domains/nasa_cmapss_turbofan/: manifest.yaml
backend/app/domains/nasa_cmapss_turbofan/documents/: cmapss_reference.md  health_gate_policy.md  sensor_watchlist.md
backend/app/domains/nasa_cmapss_turbofan/evals/: FD001-UNIT-001.expected.json
backend/app/models/: __init__.py  schemas.py  workflow_schemas.py
backend/app/services/: diagnostic_service.py  domain_ids.py  domain_service.py  embedding_service.py  eval_service.py  openai_service.py  rag_service.py  run_trace_service.py  ticket_service.py
backend/app/workflows/: diagnostic_graph.py  state.py
backend/tests/: conftest.py  test_api.py  test_diagnostic_graph.py  test_diagnostic_service.py  test_domain_service.py  test_embedding_service.py  test_eval_service.py  test_live_e2e_api.py  test_live_e2e_openai_api.py  test_live_workflow_openai_api.py  test_nasa_cmapss_domain.py  test_openai_live.py  test_openai_service.py  test_rag_service.py  test_workflow_api.py
docs/: ai-pipeline.md  (+9 more)
(+25 files in other folders)
