[project]
name = "physical-systems-intelligence-backend"
version = "0.1.0"
description = "FastAPI backend for physical systems diagnostics from signals, documents, and actions."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.1",
  "SQLAlchemy==2.0.36",
  "psycopg[binary]==3.2.3",
  "qdrant-client==1.12.1",
  "fastembed==0.4.2",
  "langgraph==1.0.4",
  "PyYAML==6.0.2",
  "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.3.4",
  "ruff==0.8.4",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
